[gd_scene load_steps=5 format=3 uid="uid://cd0crqwxdi0ns"]

[ext_resource type="TileSet" uid="uid://cye4qkqayod58" path="res://tilesets/dev_tilemap.tres" id="1_cwlpy"]
[ext_resource type="Script" path="res://devstuff/dev_level/dev_MapTemplate.gd" id="1_hto83"]
[ext_resource type="PackedScene" uid="uid://du6pm6skr6o8t" path="res://Scenes/entity.tscn" id="2_gwmi4"]
[ext_resource type="PackedScene" uid="uid://yjghblwlrnx5" path="res://devstuff/dev_level/dev_counter.tscn" id="4_4kgwt"]

[node name="dev_MapTemplate" type="Node2D"]
script = ExtResource("1_hto83")

[node name="for_zorder" type="Node2D" parent="."]
z_index = 10

[node name="HSplitContainer" type="HBoxContainer" parent="for_zorder"]
process_mode = 4
custom_minimum_size = Vector2i(576, 0)
offset_right = 576.0
offset_bottom = 16.0
alignment = 1

[node name="dev_counter" parent="for_zorder/HSplitContainer" instance=ExtResource("4_4kgwt")]
offset_right = 64.0

[node name="dev_counter2" parent="for_zorder/HSplitContainer" instance=ExtResource("4_4kgwt")]
offset_left = 68.0
offset_right = 132.0

[node name="dev_counter3" parent="for_zorder/HSplitContainer" instance=ExtResource("4_4kgwt")]
offset_left = 136.0
offset_right = 200.0

[node name="dev_counter4" parent="for_zorder/HSplitContainer" instance=ExtResource("4_4kgwt")]
offset_left = 204.0
offset_right = 268.0

[node name="dev_counter5" parent="for_zorder/HSplitContainer" instance=ExtResource("4_4kgwt")]
offset_left = 272.0
offset_right = 336.0

[node name="dev_counter6" parent="for_zorder/HSplitContainer" instance=ExtResource("4_4kgwt")]
offset_left = 340.0
offset_right = 404.0

[node name="dev_counter7" parent="for_zorder/HSplitContainer" instance=ExtResource("4_4kgwt")]
offset_left = 408.0
offset_right = 472.0

[node name="dev_counter8" parent="for_zorder/HSplitContainer" instance=ExtResource("4_4kgwt")]
offset_left = 476.0
offset_right = 540.0

[node name="dev_counter9" parent="for_zorder/HSplitContainer" instance=ExtResource("4_4kgwt")]
offset_left = 544.0
offset_right = 608.0

[node name="LogicContainer" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="LogicContainer"]
tile_set = ExtResource("1_cwlpy")
format = 2
layer_0/name = "floor"
layer_1/name = "wall"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()

[node name="Camera2d" type="Camera2D" parent="."]
offset = Vector2(288, 162)
current = true
zoom = Vector2(2, 2)

[node name="Entity" parent="." instance=ExtResource("2_gwmi4")]

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
